src/objects/Weekly_Temp_Calc__c.object
<CustomObject>
    <fields>
        <fullName>Calculation_Error_Message__c</fullName>
        <label>Calculation Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Status__c</fullName>
        <label>Calculation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Weekly Temp Calc</relationshipLabel>
        <relationshipName>Weekly_Temp_Calc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Bonus__c</fullName>
        <label>Total Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Weekly Temp Calc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interim Weekly Calc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Temp Calc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>